--- a/sharding-repl-cache/compose.yaml
+++ b/sharding-repl-cache/compose.yaml
@@ -296,7 +296,9 @@ services:
 
   pymongo_api:
     container_name: pymongo_api_cache
-    image: kazhem/pymongo_api:1.0.0
+    build:
+      context: api_app
+      dockerfile: Dockerfile
     depends_on:
       - mongos_router1
       - mongos_router2
